crates/plotnik-tests/tests/02-parser/recovery_incomplete/missing_capture_name.txt
Q = (identifier) @
------------------ DIAGNOSTICS -------------------
error: expected a capture name after `@`
 --> query.ptk:1:18
  |
1 | Q = (identifier) @
  |                  ^
  |
help: captures attach to the pattern before them: `(node) @name`
